--- a/index-home2.html
+++ b/index-home2.html
@@ -14,7 +14,7 @@
 <body>
   <script>
     function goToPageA() {
-      window.location.href = "index-home.html";
+      window.location.href = "index.html";
     }
   </script>
 
