--- a/index-classic.html
+++ b/index-classic.html
@@ -80,7 +80,7 @@
 
         <section class="car-image">
           <div class="image">
-            <img src="image/car1_1.png" alt="Classic-Car-1">
+            <img src="Image/car1_1.png" alt="Classic-Car-1">
           </div>
 
           <div class="background-overlay"></div>
