--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Oleo+Script+Swash+Caps&family=Roboto:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-image: url('Image/background.jpg');>
   <script>
     function goToPageA() {
       window.location.href = "index.html";
