--- a/index-classic2.html
+++ b/index-classic2.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bona+Nova+SC:ital,wght@0,400;0,700;1,400&family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-image: url('Image/background.jpg');>
   <script>
     function goToPageA() {
       window.location.href = "index-home.html";
