--- a/index-contact.html
+++ b/index-contact.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Oleo+Script+Swash+Caps&family=Roboto:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
 </head>
 
-<body style="background-image: url('Image/background.jpg');>
+<body>
   <div class="header">
       <div class="Logo">
         <img src="Image/Logo.png" alt="Vintago Logo" class="logo">
